# labstor

./: .gitignore  CMakeLists.txt  install.sh
CMake/: LabstorConfig.cmake
benchmark/: CMakeLists.txt  hermes_api_bench.cc  test.py  test_latency.cc
benchmark/allocator/: CMakeLists.txt  allocator.cc  test_init.cc  test_init.h
benchmark/data_structure/: CMakeLists.txt  allocator.cc  atomic.cc  string.cc  test_init.cc  test_init.h  vector.cc
src/: CMakeLists.txt  config_client.cc  config_server.cc  data_structure_singleton.cc  finalize_labstor.cc  ipc_manager.cc  labstor.cc  labstor_runtime.cc  labstor_singleton.cc  labstor_start_runtime.cc  labstor_stop_runtime.cc  rpc.cc  rpc.h  singleton.cc  singleton_generator.py  work_orchestrator.cc  worker.cc
src/client/: ipc_manager.cpp
src/memory/: fixed_fragmentation_allocator.cc  malloc_allocator.cc  memory_intercept.cc  memory_intercept.h  memory_manager.cc  multi_page_allocator.cc  page_allocator.cc  stack_allocator.cc
src/runtime/: ipc_manager.cpp  runtime.cc  runtime.cpp  singleton.cpp
src/thread/: mutex.cc  rwlock.cc  rwqueue.cc
tasks/: CMakeLists.txt
tasks/TASK_NAME/include/TASK_NAME/: TASK_NAME_lib_exec.h  TASK_NAME_methods.h  TASK_NAME_tasks.h
tasks/TASK_NAME/src/: CMakeLists.txt
tasks/bdev/include/bdev/: bdev.h  bdev_lib_exec.h  bdev_methods.h  bdev_methods.yaml  bdev_namespace.h  bdev_tasks.h
tasks/hermes/include/hermes/: bucket.h  config.h  config_client.h  config_client_default.h  config_manager.h  config_server.h  config_server_default.h  hermes.h  hermes_types.h  slab_allocator.h
tasks/hermes/include/hermes/dpe/: dpe.h  dpe_factory.h  minimize_io_time.h
tasks/hermes/src/: CMakeLists.txt
tasks/hermes_adapters/: CMakeLists.txt
tasks/hermes_adapters/filesystem/: filesystem.cc  filesystem.h  filesystem_mdm.h
tasks/hermes_adapters/include/hermes_adapters/: filesystem.h  filesystem_structs.h  hermes_adapters.h  hermes_adapters_lib_exec.h
tasks/hermes_adapters/src/: CMakeLists.txt  hermes_adapters.cc
tasks/hermes_blob_mdm/include/hermes_blob_mdm/: hermes_blob_mdm.h  hermes_blob_mdm_lib_exec.h  hermes_blob_mdm_methods.h  hermes_blob_mdm_methods.yaml  hermes_blob_mdm_tasks.h
tasks/hermes_blob_mdm/src/: CMakeLists.txt  hermes_blob_mdm.cc
tasks/hermes_bpm/include/hermes_bpm/: hermes_bpm.h
tasks/hermes_bpm/src/: CMakeLists.txt  hermes_bpm.cc
tasks/hermes_bucket_mdm/include/hermes_bucket_mdm/: hermes_bucket_mdm.h  hermes_bucket_mdm_lib_exec.h  hermes_bucket_mdm_methods.h  hermes_bucket_mdm_methods.yaml  hermes_bucket_mdm_tasks.h
tasks/hermes_bucket_mdm/src/: CMakeLists.txt  hermes_bucket_mdm.cc
tasks/hermes_dpe/include/hermes_dpe/: data_placement_engine.h  data_placement_engine_factory.h  dpe.h  hermes_dpe.h  random.h  round_robin.h
tasks/hermes_dpe/src/: CMakeLists.txt  hermes_dpe.cc
tasks/hermes_mdm/include/hermes_mdm/: hermes_mdm.h  hermes_mdm_lib_exec.h  hermes_mdm_methods.h  hermes_mdm_methods.yaml  hermes_mdm_tasks.h
tasks/hermes_mdm/src/: CMakeLists.txt  hermes_mdm.cc
tasks/hermes_stats/include/hermes_stats/: hermes_stats.h
tasks/hermes_stats/src/: CMakeLists.txt  hermes_stats.cc
tasks/labstor_admin/: CMakeLists.txt  labstor_admin.cpp
tasks/labstor_admin/include/labstor_admin/: labstor_admin.h  labstor_admin_lib_exec.h  labstor_admin_methods.h  labstor_admin_methods.yaml  labstor_admin_tasks.h
tasks/labstor_admin/src/: CMakeLists.txt  labstor_admin.cc
tasks/posix/include/posix/: posix.h
tasks/posix/src/: CMakeLists.txt  posix.cc
tasks/posix_bdev/include/posix_bdev/: posix_bdev.h
tasks/posix_bdev/src/: CMakeLists.txt  posix_bdev.cc
tasks/ram_bdev/include/ram_bdev/: ram_bdev.h
tasks/ram_bdev/src/: CMakeLists.txt  ram_bdev.cc
tasks/remote_queue/include/remote_queue/: remote_queue.h  remote_queue_lib_exec.h  remote_queue_methods.h  remote_queue_methods.yaml  remote_queue_tasks.h
tasks/remote_queue/src/: CMakeLists.txt  remote_queue.cc
tasks/remote_queue/src/fi_wrap/: remote_queue.cc
tasks/small_message/include/small_message/: small_message.h  small_message_lib_exec.h  small_message_methods.h  small_message_methods.yaml  small_message_tasks.h
tasks/small_message/src/: CMakeLists.txt  small_message.cc
tasks/task_templ/include/TASK_NAME/: TASK_NAME.h  TASK_NAME_tasks.h
tasks/task_templ/src/: TASK_NAME.cc
tasks/worch_proc_round_robin/include/worch_proc_round_robin/: worch_proc_round_robin.h  worch_proc_round_robin_tasks.h
tasks/worch_proc_round_robin/src/: CMakeLists.txt  worch_proc_round_robin.cc
tasks/worch_queue_round_robin/include/worch_queue_round_robin/: worch_queue_round_robin.h
tasks/worch_queue_round_robin/src/: CMakeLists.txt  worch_queue_round_robin.cc
tasks_required/proc_queue/src/: CMakeLists.txt  proc_queue.cc
test/unit/allocators/: CMakeLists.txt  allocator.cc  allocator_thread.cc  main_thread.cc  test_init.cc  test_init.h
test/unit/backend/: CMakeLists.txt  backend.cc  main_mpi.cc  memory_manager.cc  memory_slots.cc
test/unit/base/: CMakeLists.txt  test_connect.cc  test_connect.sh
test/unit/data_structures/: CMakeLists.txt  charbuf.cc  list.cc  main_mpi.cc  manual_ptr.cc  string.cc  test_init.h  unique_ptr.cc  unordered_map.cc  vector.cc
test/unit/data_structures/allocators/: allocator.cc  allocator_thread.cc  test_init.cc  test_init.h
test/unit/data_structures/backend/: CMakeLists.txt  backend.cc  memory_manager.cc  memory_slots.cc  test_init.cc
test/unit/data_structures/containers/: CMakeLists.txt  list.cc  list.h  locked_list.cc  manual_ptr.cc  pair.cc  slist.cc  smart_ptr.h  string.cc  test_init.cc  test_init.h  tuple.cc  unique_ptr.cc  unordered_map.cc  unordered_map_thread.cc  vector.cc  vector.h
test/unit/data_structures/containers_mpi/: CMakeLists.txt  list_vec_mpi.cc  test_init.cc  test_init.h
test/unit/data_structures/lock/: CMakeLists.txt  lock.cc
test/unit/ipc/: CMakeLists.txt  test_finalize.cc  test_init.cc  test_ipc.cc  test_serialize.cc
test/unit/lock/: CMakeLists.txt  lock.cc
test/unit/memory/: CMakeLists.txt  allocator.cc  memory_manager.cc  memory_slots.cc  reserve.cc
(+458 files in other folders)
