set(TASK_DIR ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(task_templ)
add_subdirectory(small_message)
add_subdirectory(labstor_admin)
add_subdirectory(worch_proc_round_robin)
add_subdirectory(worch_queue_round_robin)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/hermes/include)
add_subdirectory(hermes_bpm)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/hermes_bpm/include)
add_subdirectory(hermes_mdm)