set(TASK_DIR ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(task_templ)
add_subdirectory(small_message)
add_subdirectory(labstor_admin)
add_subdirectory(worch_proc_round_robin)
add_subdirectory(worch_queue_round_robin)

add_subdirectory(bdev)
add_subdirectory(ram_bdev)
add_subdirectory(posix_bdev)
add_subdirectory(hermes_mdm)
add_subdirectory(hermes_adapters)
