set(TASK_DIR ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(TASK_NAME)
add_subdirectory(small_message)
add_subdirectory(labstor_admin)
add_subdirectory(remote_queue)
add_subdirectory(worch_proc_round_robin)
add_subdirectory(worch_queue_round_robin)

add_subdirectory(hermes)
add_subdirectory(bdev)
add_subdirectory(ram_bdev)
add_subdirectory(posix_bdev)
add_subdirectory(hermes_mdm)
add_subdirectory(hermes_blob_mdm)
add_subdirectory(hermes_bucket_mdm)
add_subdirectory(hermes_adapters)
